# 360-Crypto-Eye

./: .env.example  .gitignore  Makefile  OPERATIONS.md  README.md  SCORECARD.md  pyproject.toml  requirements.txt  scripts_init_db.py
docs/: RUNBOOK.md
infra/docker/: Dockerfile.base  docker-compose.yml
libs/adapters/: telegram_adapter.py
libs/core/: config.py  db.py  logging.py
scripts/: init_db.sh  init_db.sql  seed_signals.sh  seed_signals.sql  smoke_test.sh
services/api/: main.py
services/chart_renderer/: main.py
services/feature_engine/: main.py
services/ingestion/: main.py
services/ops_bot/: Dockerfile  main.py
services/paper_engine/: main.py
services/publisher/: Dockerfile  main.py
services/signal_engine/: main.py
